--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "react-loader-spinner": "^6.1.6",
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.23.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "swiper": "^11.1.4",
     "web-vitals": "^2.1.4"
   },
